<resources>
    <string name="app_name">PushayAdmin</string>
    <string name="perm_camera">Se necesitan permisos para la cámara</string>
    <string name="pick_image_intent_text">Elegir imagen</string>


    //First strings
    <string name="sign_in">Iniciar Sesión</string>
    <string name="register">Registrarse</string>
    <string name="find">¿Buscas Pushay para usuarios?</string>
    <string name="download">Descárgala aquí</string>

    //login strings
    <string name="email">Correo Electrónico</string>
    <string name="password">Contraseña</string>
    <string name="forgot_password">¿Olvidaste tu contraseña?</string>


    //Register strings
    <string name="firstname">Nombres</string>
    <string name="lasttname">Apellidos</string>
    <string name="birth">Fecha de nacimiento</string>
    <string name="cellphone">Celular</string>
    <string name="male">Hombre</string>
    <string name="female">Mujer</string>
    <string name="create">Crear cuenta</string>

    //Change Password strings
    <string name="old_password">Contraseña actual</string>
    <string name="new_password">Nueva contraseña</string>
    <string name="new_password_again">Repita su nueva contraseña</string>
    <string name="change_pass">Cambiar contraseña</string>

    //Selected place
    <string name="selected">Selecciona el día que quieres \nir a este lugar con tu guía</string>
    <string name="selected_date">dd/mm/aaaa</string>

    <string name="decript">descripción</string>
    <string name="persons">personas</string>
    <string name="decript_guide">descripción</string>

    //Paid Ticket
    <string name="detail">*No te olvides de presentar tu código QR al guía\npara empezar
    y finalizar tu paseo guiado</string>
    <string name="thanks">¡Qué disfrutes tu viaje!</string>

    // Day Strings

    <string name="monday">Lun</string>
    <string name="tuesday">Mar</string>
    <string name="wednesday">Mie</string>
    <string name="thursday">Jue</string>
    <string name="friday">Vie</string>
    <string name="saturday">Sab</string>
    <string name="sunday">Dom</string>
    <string name="create_scheludes">Su horario se ha \nregistrado con éxito</string>

    //Dialog validate Travel
    <string name="title">Detalle del recorrido</string>
    <string name="package_name">Nombre del paquete: </string>
    <string name="decription_package">descripción</string>
    <string name="validate_travel">Validar viaje por QR</string>
    <string name="selected_travel">Seleccionar lugar</string>
    <string name="validate">Valida el destino</string>
    <string name="confirmed_travel">Su viaje se ha \nvalidado correctamente</string>

    //Dialog Register User
    <string name="title_register">Hola! </string>
    <string name="title_2">Gracias por registrarte como guía en Pushay </string>
    <string name="confirm">Te estaremos contactando en los próximos días para validar tus datos</string>

    //Details strings

    <string name="locality">Lugar de encuentro: </string>
    <string name="hour">Hora de encuentro: </string>
    <string name="date_travel">Fecha de viaje: </string>
    <string name="status">NO VALIDADO</string>

</resources>
