<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_clean">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            android:focusableInTouchMode="true"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <android.support.design.widget.TextInputLayout
                android:layout_width="300dp"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:imeOptions="actionNext"
                    android:padding="10dp" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="300dp"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content">
            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:imeOptions="actionNext"
                android:padding="10dp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="300dp"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/et_firstname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:hint="@string/firstname"
                    android:inputType="textCapWords"
                    android:imeOptions="actionNext"
                    android:padding="10dp" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="300dp"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/et_lastname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:hint="@string/lasttname"
                    android:inputType="textCapWords"
                    android:imeOptions="actionNext"
                    android:padding="10dp" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="300dp"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/et_cellphone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:hint="@string/cellphone"
                    android:inputType="number"
                    android:imeOptions="actionDone"
                    android:padding="10dp" />
            </android.support.design.widget.TextInputLayout>
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:orientation="horizontal"
                android:gravity="center">

                <RadioButton
                    android:id="@+id/btn_man"
                    android:layout_width="140dp"
                    android:layout_height="35dp"
                    android:gravity="center"
                    android:background="@drawable/radio_button_group"
                    android:button="@null"
                    android:text="@string/male" />
                <RadioButton
                    android:id="@+id/btn_woman"
                    android:layout_marginLeft="20dp"
                    android:layout_width="140dp"
                    android:layout_height="35dp"
                    android:gravity="center"
                    android:background="@drawable/radio_button_group"
                    android:button="@null"
                    android:text="@string/female"/>

            </RadioGroup>

            <Button
                android:id="@+id/btn_create"
                android:layout_width="300dp"
                android:layout_height="35dp"
                android:layout_marginTop="30dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/button_square_border"
                android:text="@string/create"
                android:textColor="@color/white" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>