<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerInside"
        android:background="@drawable/background_logo"/>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:focusableInTouchMode="true">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_margin="10dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_login"
                        android:layout_width="150dp"
                        android:layout_height="35dp"
                        android:layout_margin="10dp"
                        android:layout_gravity="center_horizontal"
                        android:background="@drawable/button_border"
                        android:text="@string/sign_in"/>
                    <Button
                        android:id="@+id/btn_register"
                        android:layout_width="150dp"
                        android:layout_height="35dp"
                        android:layout_margin="10dp"
                        android:layout_gravity="center_horizontal"
                        android:background="@drawable/button_border"
                        android:text="@string/register"/>

                </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:gravity="center"
                        android:background="@color/white"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:text="@string/find"/>
                        <TextView
                            android:layout_marginLeft="5dp"
                            android:id="@+id/tv_download"
                            android:gravity="center"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorPrimary"
                            android:text="@string/download"/>

                    </LinearLayout>

            </LinearLayout>
    </FrameLayout>

</RelativeLayout>