<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="EDITA TUS DATOS"
            fontPath = "fonts/Gotham-Medium.otf"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/xlarge_text" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/et_firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:hint="@string/firstname"
                android:imeOptions="actionNext"
                android:inputType="textCapWords"
                android:padding="10dp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <EditText
                android:id="@+id/et_lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:hint="@string/lasttname"
                android:imeOptions="actionNext"
                android:inputType="textCapWords"
                android:padding="10dp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:focusable="false">

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:focusable="false"
                android:hint="@string/email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:padding="10dp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <EditText
                android:id="@+id/et_cellphone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:hint="@string/cellphone"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:padding="10dp" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_create"
            android:layout_width="250dp"
            android:layout_height="35dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button_square_border"
            android:text="Aceptar"
            android:textColor="@color/white" />
    </LinearLayout>

</RelativeLayout>