<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:layout_marginTop="20dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="vertical">

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbarSize="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_margin="10dp"
                        android:orientation="horizontal">
                        <RadioButton
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:id="@+id/monday"
                            android:text="@string/monday"
                            android:gravity="center"
                            android:textColor="@color/white"
                            android:background="@drawable/radio_button_day"
                            android:button="@null"/>
                        <RadioButton
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:id="@+id/tuesday"
                            android:text="@string/tuesday"
                            android:gravity="center"
                            android:textColor="@color/white"
                            android:layout_marginLeft="12dp"
                            android:background="@drawable/radio_button_day"
                            android:button="@null"/>
                        <RadioButton
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginLeft="12dp"
                            android:id="@+id/wednesday"
                            android:text="@string/wednesday"
                            android:gravity="center"
                            android:textColor="@color/white"
                            android:background="@drawable/radio_button_day"
                            android:button="@null"/>
                        <RadioButton
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginLeft="12dp"
                            android:id="@+id/thursday"
                            android:text="@string/thursday"
                            android:gravity="center"
                            android:textColor="@color/white"
                            android:background="@drawable/radio_button_day"
                            android:button="@null"/>
                        <RadioButton
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginLeft="12dp"
                            android:id="@+id/friday"
                            android:text="@string/friday"
                            android:gravity="center"
                            android:textColor="@color/white"
                            android:background="@drawable/radio_button_day"
                            android:button="@null"/>
                        <RadioButton
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginLeft="12dp"
                            android:id="@+id/saturday"
                            android:text="@string/saturday"
                            android:gravity="center"
                            android:textColor="@color/white"
                            android:background="@drawable/radio_button_day"
                            android:button="@null"/>
                        <RadioButton
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginLeft="12dp"
                            android:id="@+id/sunday"
                            android:text="@string/sunday"
                            android:gravity="center"
                            android:textColor="@color/white"
                            android:background="@drawable/radio_button_day"
                            android:button="@null"/>
                    </RadioGroup>
                </LinearLayout>

            </HorizontalScrollView>



        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="4dp"
            android:background="@color/gray"></View>

        <RelativeLayout
            android:animateLayoutChanges="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:animateLayoutChanges="true"
                android:id="@+id/layout_calendar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="4dp"
                android:orientation="vertical"
                android:visibility="visible">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/tv_close"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_weight="1"
                                android:text="No trabajo hoy"
                                android:textColor="@color/red" />

                            <android.support.v7.widget.SwitchCompat
                                android:id="@+id/switch_disable"
                                android:checked="false"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical" />

                        </LinearLayout>




                    </LinearLayout>

                </LinearLayout>

                <com.cerezaconsulting.pushayadmin.core.ScrollChildSwipeRefreshLayout
                    android:layout_width="match_parent"
                    android:id="@+id/refresh_layout"
                    android:layout_height="wrap_content">
                    <FrameLayout
                        android:id="@+id/listSchedulesRL"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:visibility="gone">

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/rvList"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                        </android.support.v7.widget.RecyclerView>


                        <Button
                            android:layout_width="match_parent"
                            android:layout_height="35dp"
                            android:background="@drawable/button_secondary"
                            android:layout_gravity="bottom"
                            android:layout_margin="25dp"
                            android:id="@+id/btn_get_in"
                            android:textColor="@color/white"
                            android:text="Registrar"/>


                    </FrameLayout>

                </com.cerezaconsulting.pushayadmin.core.ScrollChildSwipeRefreshLayout>




            </LinearLayout>


        </RelativeLayout>


    </LinearLayout>

</RelativeLayout>